--- a/tasks/configure_listening_port.yml
+++ b/tasks/configure_listening_port.yml
@@ -1,4 +1,14 @@
 ---
+- name: Ensure local folder is present
+  file:
+    path: "{{ splunk_home }}/etc/apps/search/local"
+    state: directory
+    owner: "{{ splunk_nix_user }}"
+    group: "{{ splunk_nix_group }}"
+    mode: '0755'
+  become: true
+  when: splunk_listening_port != 'undefined'
+
 - name: Configure Splunk Listening port
   ini_file:
     path: "{{ splunk_home }}/etc/apps/search/local/inputs.conf"
@@ -7,7 +17,7 @@
     value: 'ip'
     owner: "{{ splunk_nix_user }}"
     group: "{{ splunk_nix_group }}"
-    mode: 0644
+    mode: '0644'
   become: true
   notify: restart splunk
   when: splunk_listening_port != 'undefined'
