--- a/tasks/add_crashlog_script.yml
+++ b/tasks/add_crashlog_script.yml
@@ -1,15 +1,15 @@
 ---
 - name: Add cleanup_crashlogs.sh
-  template:
+  ansible.builtin.template:
     src: cleanup_crashlogs.sh.j2
     dest: "{{ splunk_home }}/cleanup_crashlogs.sh"
     owner: root
     group: root
-    mode: 0755
+    mode: "0755"
   become: true
 
 - name: Configure cron to run cleanup_crashlogs.sh daily at midnight
-  cron:
+  ansible.builtin.cron:
     name: "Run cleanup_crashlogs.sh"
     state: present
     job: "{{ splunk_home }}/cleanup_crashlogs.sh"
