--- a/tasks/adhoc_clean_dispatch.yml
+++ b/tasks/adhoc_clean_dispatch.yml
@@ -1,10 +1,11 @@
 ---
-- name: Stop Splunk
-  include_tasks: splunk_stop.yml
+- name: Stop splunk
+  ansible.builtin.include_tasks: splunk_stop.yml
 
 - name: Clean dispatch directory of all files
-  command: "rm -rf {{ splunk_home }}/var/run/splunk/dispatch/*"
+  ansible.builtin.command: "rm -rf {{ splunk_home }}/var/run/splunk/dispatch/*"
   become: true
+  changed_when: false
 
 - name: Start Splunk
-  include_tasks: splunk_start.yml
+  ansible.builtin.include_tasks: splunk_start.yml
