--- a/tasks/configure_auditd.yml
+++ b/tasks/configure_auditd.yml
@@ -1,41 +1,45 @@
 ---
-- name: "get {{ splunk_nix_user }} user uid"
-  getent:
+- name: "Get {{ splunk_nix_user }} user uid"
+  ansible.builtin.getent:
     database: passwd
     key: "{{ splunk_nix_user }}"
 
-- name: auditd - set 20-splunk.rules
-  become: true
-  template:
+- name: Auditd - set 20-splunk.rules
+  ansible.builtin.template:
     src: 20-splunk.rules.j2
     dest: /etc/audit/rules.d/20-splunk.rules
-    mode: 0600
+    mode: "0600"
     owner: root
     group: root
+  become: true
   register: splunk_rule
 
 - name: Get auditd enabled level
+  ansible.builtin.shell:
+    cmd: |
+      set -o pipefail
+
+      auditctl -s | grep enabled | cut -d" " -f2
   become: true
-  shell: auditctl -s | grep enabled | cut -d" " -f2
   changed_when: false
   check_mode: false
   register: auditctl_enabled
 
 # restart auditd if not immutable
-- name: restart auditd if not immutable
-  become: true
-  service:
+- name: Restart auditd if not immutable
+  ansible.builtin.service:
     name: auditd
     state: restarted
     use: service
+  become: true
   when:
     - splunk_rule is changed
     - auditctl_enabled.stdout != '2'
   tags: molecule-notest
 
 # if immutable output "auditd immutable - OS REBOOT REQUIRED"
-- name: auditd immutable  # noqa no-handler
-  debug:
+- name: Auditd immutable  # noqa no-handler
+  ansible.builtin.debug:
     msg: "auditd immutable - OS REBOOT REQUIRED"
   when:
     - splunk_rule is changed
