--- a/tasks/configure_bash.yml
+++ b/tasks/configure_bash.yml
@@ -1,11 +1,11 @@
 ---
 - name: Install .bashrc and .bash_profile files
-  template:
+  ansible.builtin.template:
     src: "{{ item.bashtemplate }}"
     dest: "{{ splunk_home }}/{{ item.bashfilepath }}"
     owner: "{{ splunk_nix_user }}"
     group: "{{ splunk_nix_group }}"
-    mode: 0644
+    mode: "0644"
   become: true
   loop:
     - { bashtemplate: 'bashrc.j2', bashfilepath: '.bashrc' }
