--- a/tasks/configure_license.yml
+++ b/tasks/configure_license.yml
@@ -1,16 +1,19 @@
 ---
 # Check splunk version to determine if we use `master_uri` or `manager_uri`.
 - name: Run splunk version command to check currently installed version
-  include_tasks: check_splunk_version.yml
+  ansible.builtin.include_tasks: check_splunk_version.yml
 
 - name: Setting licensing mode based on Splunk version number
-  set_fact:
+  ansible.builtin.set_fact:
     mode_option: "{{ splunk_version_release is version('9.0', '<') | ternary('master_uri', 'manager_uri') }}"
 
 - name: Configure Local License
+  when:
+    - not splunk_license_group == "Peer"
+    - splunk_install_type == "full"
   block:
   - name: Create license/enterprise directory
-    file:
+    ansible.builtin.file:
       path: "{{ splunk_home }}/etc/licenses/enterprise"
       state: directory
       mode: "0700"
@@ -19,8 +22,9 @@
     become: true
     when:
       - splunk_license_group=="Enterprise"
+
   - name: Copy license file
-    copy:
+    ansible.builtin.copy:
       src: "{{ item }}"
       dest: "{{ splunk_home }}/etc/licenses/enterprise/{{ item }}"
       owner: "{{ splunk_nix_user }}"
@@ -28,24 +32,26 @@
       mode: "0600"
     loop: "{{ splunk_license_file }}"
     become: true
-    notify: restart splunk
+    notify: Restart splunk
     when:
       - splunk_license_group=="Enterprise"
-  - name: "Remove license manager uri when using local license"
-    ini_file:
+
+  - name: "Remove license manager uri when using local license" # noqa risky-file-permissions
+    community.general.ini_file:
       path: "{{ splunk_home }}/etc/system/local/server.conf"
       section: license
       option: "{{ item }}"
       owner: "{{ splunk_nix_user }}"
       group: "{{ splunk_nix_group }}"
       state: absent
-    with_items: 
+    with_items:
       - manager_uri
       - master_uri
     become: true
-    notify: restart splunk
-  - name: Configure License Group
-    ini_file:
+    notify: Restart splunk
+
+  - name: Configure License Group # noqa risky-file-permissions
+    community.general.ini_file:
       path: "{{ splunk_home }}/etc/system/local/server.conf"
       section: license
       option: active_group
@@ -53,15 +59,15 @@
       owner: "{{ splunk_nix_user }}"
       group: "{{ splunk_nix_group }}"
     become: true
-    notify: restart splunk
-  when:
-    - not splunk_license_group=="Peer"
-    - splunk_install_type=="full"
+    notify: Restart splunk
 
 - name: Configure License Peer
+  when:
+    - splunk_license_group == "Peer"
+    - splunk_install_type == "full"
   block:
-  - name: "Set license {{ mode_option }}"
-    ini_file:
+  - name: "Set license {{ mode_option }}" # noqa risky-file-permissions
+    community.general.ini_file:
       path: "{{ splunk_home }}/etc/system/local/server.conf"
       section: license
       option: "{{ mode_option }}"
@@ -69,17 +75,17 @@
       owner: "{{ splunk_nix_user }}"
       group: "{{ splunk_nix_group }}"
     become: true
-    notify: restart splunk
+    notify: Restart splunk
 
   - name: Extract encrypted value
-    include_tasks: check_decrypted_secret.yml
+    ansible.builtin.include_tasks: check_decrypted_secret.yml
     vars:
       req_secret_conf: server
       req_secret_section: general
       req_secret_option: pass4SymmKey
 
-  - name: Set pass4SymmKey to match LM
-    ini_file:
+  - name: Set pass4SymmKey to match LM # noqa risky-file-permissions
+    community.general.ini_file:
       path: "{{ splunk_home }}/etc/system/local/server.conf"
       section: general
       option: pass4SymmKey
@@ -87,11 +93,8 @@
       owner: "{{ splunk_nix_user }}"
       group: "{{ splunk_nix_group }}"
     become: true
-    notify: restart splunk
+    notify: Restart splunk
     when:
       - splunk_general_key != "undefined"
       - encrypted_secret_value.stdout == "" or (splunk_general_key != decrypted_secret_value.stdout | default(''))
     no_log: true
-  when:
-    - splunk_license_group=="Peer"
-    - splunk_install_type=="full"
