--- a/tasks/configure_serverclass.yml
+++ b/tasks/configure_serverclass.yml
@@ -3,7 +3,7 @@
   when: serverclasses is defined
   block:
     - name: Check for duplicate serverclasses
-      assert:
+      ansible.builtin.assert:
         that: >
               serverclasses | map(attribute='serverclass') | list | count
               ==
@@ -11,12 +11,12 @@
         fail_msg: "A duplicate serverclass has been detected! Please correct the vars and try again."
 
     - name: Generate serverclass.conf from vars
-      template:
+      ansible.builtin.template:
         src: serverclass.conf.j2
         dest: "{{ splunk_home }}/etc/system/local/serverclass.conf"
         backup: true
-        mode: 0644
+        mode: "0644"
         owner: "{{ splunk_nix_user }}"
         group: "{{ splunk_nix_group }}"
       become: true
-      notify: reload deployment server
+      notify: Reload deployment server
