--- a/tasks/configure_splunk_secret.yml
+++ b/tasks/configure_splunk_secret.yml
@@ -4,7 +4,7 @@
     dest: "{{ splunk_home }}/etc/auth/splunk.secret"
     owner: "{{ splunk_nix_user }}"
     group: "{{ splunk_nix_group }}"
-    mode: 0400
+    mode: "0400"
   become: true
-  notify: restart splunk
+  notify: Restart splunk
   when: splunk_configure_secret
