--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -23,8 +23,8 @@ splunk_license_file: [] # This can be a list of license files to copy to the hos
 splunk_license_group: Trial # The default matches with the group splunk ships with. You can also set the value via a group_vars or host_vars file.
 splunk_uri_cm: undefined
 splunk_uri_ds: undefined # e.g. mydeploymentserver.mydomain.com:8089 ; Note that you must also configure the clientName var under either group_vars or host_vars for deploymentclient.conf to be configured
-clientName: undefined
-phoneHomeIntervalInSecs: undefined
+clientName: undefined # noqa var-naming[pattern]
+phoneHomeIntervalInSecs: undefined # noqa var-naming[pattern]
 splunk_general_key: undefined # Configures a pass4SymmKey in server.conf under the general stanza
 splunk_ds_key: undefined # Configures a pass4SymmKey in server.conf for authenticating against a deployment server
 splunk_admin_username: admin
@@ -38,7 +38,7 @@ splunk_authenticationconf: authentication.conf.j2
 splunk_create_polkit: 0  # If set to 1 `enable boot-start` will create a polkit rules file allowing the 'splunk_nix_user' to restart the splunk service without authentication.
 splunk_use_initd: false  # If set to true, the system will use init.d. Default false
 splunk_use_systemd: true # DO NOT EDIT. To use init.d, set `splunk_use_initd` to true.
-splunk_force_kill: False
+splunk_force_kill: false
 systemd_unit_full: Splunkd # You can change this in `host_vars` or `group_vars` to customize the service name.
 systemd_unit_uf: SplunkForwarder # You can change this in `host_vars` or `group_vars` to customize the service name.
 splunk_disable_mgmt_port: false # If set to true, will disable splunkd management port during installation
@@ -60,7 +60,7 @@ splunk_idxc_sf: 2
 splunk_idxc_rep_port: 9887
 splunk_idxc_label: myidxc
 splunk_apply_cluster_bundle_retries: 3 # How many times to retry indexer cluster bundle apply if it fails
-splunk_apply_cluster_bundle_delay: 60 # Delay in seconds between retries to apply indexer cluster bundle
+splunk_apply_cluster_bundle_delay: 60 # Delay in seconds between retries to Apply indexer cluster bundle
 splunk_apply_shcluster_bundle_retries: 3 # How many times to retry SHC bundle apply if it fails
 splunk_apply_shcluster_bundle_delay: 60 #  Delay in seconds between retries to apply SHC bundle
 # SHC Vars
