--- a/tasks/adhoc_decom_indexer.yml
+++ b/tasks/adhoc_decom_indexer.yml
@@ -1,7 +1,8 @@
 ---
 - name: Execute splunk offline --enforce-counts
-  command: "{{ splunk_home }}/bin/splunk offline --enforce-counts -auth {{ splunk_auth }}"
+  ansible.builtin.command: "{{ splunk_home }}/bin/splunk offline --enforce-counts -auth {{ splunk_auth }}"
   become: true
   become_user: "{{ splunk_nix_user }}"
+  changed_when: false
   no_log: true
   when: "'indexer' in group_names"
