--- a/tasks/adhoc_fix_server_certificate.yml
+++ b/tasks/adhoc_fix_server_certificate.yml
@@ -2,11 +2,12 @@
 # To check if cert is expired:  splunk cmd openssl x509 -in /opt/splunk/etc/auth/server.pem -text -noout
 # Note: Genereates new default certificate. Do not use this if you generate/sign your own splunkd certificate
 - name: Remove old server.pem certificate and generate a new one
-  command: "{{ item }}"
+  ansible.builtin.command: "{{ item }}"
   become: true
   become_user: "{{ splunk_nix_user }}"
+  changed_when: false
   loop:
     - "rm {{ splunk_home }}/etc/auth/server.pem"
     - "{{ splunk_home }}/bin/splunk createssl server-cert -d {{ splunk_home }}/etc/auth -n server.pem"
   notify:
-    - restart splunk
+    - Restart splunk
