--- a/tasks/check_decrypted_secret.yml
+++ b/tasks/check_decrypted_secret.yml
@@ -1,6 +1,7 @@
 ---
-- name: "Extract encrypted {{ req_secret_option }} of {{ req_secret_conf }}.conf [{{ req_secret_section }}]"
-  shell: "{{ splunk_home }}/bin/splunk btool {{ req_secret_conf }} list {{ req_secret_section }} | grep '{{ req_secret_option }} = ' | awk -F ' = ' '{print $2}'"
+- name: "Extract encrypted {{ req_secret_option }} of {{ req_secret_conf }}.conf [{{ req_secret_section }}]" # noqa risky-shell-pipe
+  ansible.builtin.shell:
+    cmd: "{{ splunk_home }}/bin/splunk btool {{ req_secret_conf }} list {{ req_secret_section }} | grep '{{ req_secret_option }} = ' | awk -F ' = ' '{print $2}'"
   register: encrypted_secret_value
   become: true
   become_user: "{{ splunk_nix_user }}"
@@ -9,7 +10,8 @@
   no_log: true
 
 - name: "Decrypt {{ req_secret_option }} of {{ req_secret_conf }}.conf [{{ req_secret_section }}]"
-  shell: "{{ splunk_home }}/bin/splunk show-decrypted --value '{{ encrypted_secret_value.stdout }}'"
+  ansible.builtin.command:
+    cmd: "{{ splunk_home }}/bin/splunk show-decrypted --value '{{ encrypted_secret_value.stdout }}'"
   register: decrypted_secret_value
   become: true
   no_log: true
