--- a/tasks/configure_authentication.yml
+++ b/tasks/configure_authentication.yml
@@ -1,13 +1,14 @@
 ---
 - name: Install authentication.conf for admins
-  template:
+  ansible.builtin.template:
     src: "{{ splunk_authenticationconf }}"
     dest: "{{ splunk_home }}/etc/system/local/authentication.conf"
     owner: "{{ splunk_nix_user }}"
     group: "{{ splunk_nix_group }}"
+    mode: '0644'
   become: true
   when:
     - splunk_authenticationconf is defined
     - ad_bind_password != 'undefined'
-  notify: restart splunk
+  notify: Restart splunk
   no_log: true
