--- a/tasks/configure_dmc.yml
+++ b/tasks/configure_dmc.yml
@@ -1,9 +1,9 @@
 ---
 - name: Check splunk
-  include_task: check_splunk.yml
+  ansible.builtin.include_task: check_splunk.yml
 
 - name: Configure DMC as a IDXC member
-  include_tasks: configure_idxc_sh.yml
+  ansible.builtin.include_tasks: configure_idxc_sh.yml
 
 # Add all hosts to the DMC except indexer cluster hosts as per the docs
 - name: Configure systems as search peers to be monitored except indexers
@@ -12,6 +12,7 @@
   loop: "{{ query('inventory_hostnames', 'all:!indexer') }}"
   become: true
   become_user: "{{ splunk_nix_user }}"
+  changed_when: false
   no_log: true
 
 - name: Configure monitoring console in auto mode
@@ -22,7 +23,7 @@
     value: enabled
     owner: "{{ splunk_nix_user }}"
     group: "{{ splunk_nix_group }}"
-    mode: 0644
+    mode: "0644"
   become: true
   become_user: "{{ splunk_nix_user }}"
-  notify: restart splunk
+  notify: Restart splunk
