--- a/tasks/configure_facl.yml
+++ b/tasks/configure_facl.yml
@@ -1,13 +1,15 @@
 ---
 - name: Configure file access control list (facl) settings for splunk user
+  when: not least_privileged
   block:
     - name: Install acl package
-      package:
+      ansible.builtin.package:
         name: "acl"
         state: present
       become: true
+
     - name: Set default facl to allow splunk user to read /var/log
-      acl:
+      ansible.posix.acl:
         path: /var/log
         entity: "{{ splunk_nix_user }}"
         etype: user
@@ -21,13 +23,13 @@
         - false
 
     - name: 'Check if {{ logrotate_file }} is present'
-      stat:
+      ansible.builtin.stat:
         path: "{{ logrotate_file }}"
       register: result_logrotate_conf
       become: true
 
     - name: Add setfacl to logrotate script
-      lineinfile:
+      ansible.builtin.lineinfile:
         path: "{{ logrotate_file }}"
         insertbefore: 'endscript'
         line: '        /usr/bin/setfacl -Rm u:{{ splunk_nix_user }}:rx /var/log'
@@ -35,21 +37,20 @@
       when: result_logrotate_conf.stat.exists
 
     - name: Check if auditd.conf is present
-      stat:
+      ansible.builtin.stat:
         path: /etc/audit/auditd.conf
       register: result_auditd_conf
       become: true
 
     - name: Allow splunk to read /var/log/audit.log
-      ini_file:
+      community.general.ini_file:
         path: /etc/audit/auditd.conf
         section: null
         option: log_group
         value: "{{ splunk_nix_group }}"
+        mode: '0640'
       become: true
       notify:
-        - restart redhat auditd service
-        - restart non-redhat auditd service
+        - Restart redhat auditd service
+        - Restart non-redhat auditd service
       when: result_auditd_conf.stat.exists
-
-  when: not least_privileged
