--- a/tasks/configure_shc_deployer.yml
+++ b/tasks/configure_shc_deployer.yml
@@ -1,22 +1,22 @@
 ---
 - name: Extract encrypted value
-  include_tasks: check_decrypted_secret.yml
+  ansible.builtin.include_tasks: check_decrypted_secret.yml
   vars:
     req_secret_conf: server
     req_secret_section: shclustering
     req_secret_option: pass4SymmKey
 
 - name: Configure pass4SymmKey in  shclustering stanza for deployer
-  ini_file:
+  community.general.ini_file:
     path: "{{ splunk_home }}/etc/system/local/server.conf"
     section: shclustering
     option: pass4SymmKey
     value: "{{ splunk_shc_key }}"
-    mode: 0644
+    mode: "0644"
     owner: "{{ splunk_nix_user }}"
     group: "{{ splunk_nix_group }}"
   become: true
-  notify: restart splunk
+  notify: Restart splunk
   no_log: true
   when: encrypted_secret_value.stdout == "" or (splunk_shc_key != decrypted_secret_value.stdout | default(''))
 
@@ -26,8 +26,8 @@
     section: shclustering
     option: shcluster_label
     value: "{{ splunk_shc_label }}"
-    mode: 0644
+    mode: "0644"
     owner: "{{ splunk_nix_user }}"
     group: "{{ splunk_nix_group }}"
   become: true
-  notify: restart splunk
+  notify: Restart splunk
