--- a/tasks/configure_thp.yml
+++ b/tasks/configure_thp.yml
@@ -5,71 +5,71 @@
 # https://github.com/objectrocket/ansible-hadoop/blob/master/playbooks/roles/common/tasks/main.yml
 # https://github.com/redhat-performance/tuned/commit/26db89de18efad1b453618ea8156422d26e0c85f
 
-- name: Disable THP
+- name: Disable THP # noqa ignore-errors
+  ignore_errors: true
   block:
   - name: Disable THP using a systemd unit file
+    when: not use_tuned_thp
     block:
     - name: Copy systemd disable-thp unit file
-      copy:
+      ansible.builtin.copy:
         src: disable-thp.service
         dest: /etc/systemd/system/disable-thp.service
-        mode: 0644
+        mode: "0644"
         owner: root
         group: root
       become: true
       notify:
-        - reload systemctl daemon
+        - Reload systemctl daemon
+
     - name: Enable disable-thp unit file
-      service:
+      ansible.builtin.service:
         name: disable-thp
-        enabled: yes
+        enabled: true
         state: started
       become: true
-    when:
-      - not use_tuned_thp
 
   - name: Configure THP using tuned profile
+    when: use_tuned_thp
     block:
     - name: Install tuned package
-      package:
+      ansible.builtin.package:
         name: "tuned"
         state: present
         update_cache: true
       become: true
+
     - name: Check active tuned profile
-      command: tuned-adm active
+      ansible.builtin.command: tuned-adm active
       register: tuned_profile
       become: true
-      check_mode: no
+      check_mode: false
       changed_when: false
+
     - name: Set active tuned profile variable
-      set_fact:
+      ansible.builtin.set_fact:
         tuned_active_profile: "{{ tuned_profile.stdout | regex_search('\\S+$') }}"
+
     - name: Create /etc/tuned/splunk directory
-      file:
+      ansible.builtin.file:
         path: /etc/tuned/splunk
         state: directory
         mode: "0755"
         owner: root
         group: root
       become: true
+
     - name: Copy splunk profile tuned.conf
-      copy:
+      ansible.builtin.copy:
         src: tuned_thp.conf
         dest: /etc/tuned/splunk/tuned.conf
-        mode: 0644
+        mode: "0644"
         owner: root
         group: root
       become: true
+
     - name: Enable tuned profile
-      command: tuned-adm profile splunk
+      ansible.builtin.command: tuned-adm profile splunk
       become: true
+      changed_when: false
       when: tuned_active_profile != "splunk"
-    when:
-      - use_tuned_thp
-  # no (real) services in docker containers
-  # and no need to bother for molecule testing
-  # NOTE ansible_connection!="docker" is not included in the when expression
-  # because we want to test this task's functionality, we want it to run even though it does nothing for a container
-  # but the notified handlers above will be skipped by their when expressions
-  ignore_errors: true
