--- a/tasks/set_maintenance_mode.yml
+++ b/tasks/set_maintenance_mode.yml
@@ -1,8 +1,9 @@
 ---
 - name: "{{ state }} maintenance mode on cm"
-  command: "{{ splunk_home }}/bin/splunk {{ state }} maintenance-mode --answer-yes --skip-validation -auth {{ splunk_auth }}"
+  ansible.builtin.command: "{{ splunk_home }}/bin/splunk {{ state }} maintenance-mode --answer-yes --skip-validation -auth {{ splunk_auth }}"
   become: true
   become_user: "{{ splunk_nix_user }}"
+  changed_when: false
   no_log: true
   when:
     - state is defined and splunk_auth is defined
