--- a/tasks/set_upgrade_state.yml
+++ b/tasks/set_upgrade_state.yml
@@ -1,8 +1,9 @@
 ---
 - name: "Run splunk upgrade-{{ peer_state }} cluster-peers on CM"
-  command: "{{ splunk_home }}/bin/splunk upgrade-{{ peer_state }} cluster-peers -auth {{ splunk_auth }}"
+  ansible.builtin.command: "{{ splunk_home }}/bin/splunk upgrade-{{ peer_state }} cluster-peers -auth {{ splunk_auth }}"
   become: true
   become_user: "{{ splunk_nix_user }}"
+  changed_when: false
   no_log: true
   when:
     - peer_state is defined and splunk_auth is defined
