--- a/tasks/slack_messenger.yml
+++ b/tasks/slack_messenger.yml
@@ -1,7 +1,7 @@
 ---
 # This task feeds messags to Slack about what Ansible is doing
-- name: "Send Slack message to {{ slack_channel }} indicating Ansible play information"
-  slack:
+- name: "Send Slack message to {{ slack_channel }} indicating Ansible play information" # noqa ignore-errors
+  community.general.slack:
     msg: "{{ item }}"
     token: "{{ slack_token }}"
     channel: "{{ slack_channel }}"
