--- a/tasks/splunk_license_accept.yml
+++ b/tasks/splunk_license_accept.yml
@@ -1,6 +1,6 @@
 ---
 - name: Accept Splunk license
-  command: "{{ splunk_home }}/bin/splunk status --accept-license --answer-yes --no-prompt"
+  ansible.builtin.command: "{{ splunk_home }}/bin/splunk status --accept-license --answer-yes --no-prompt"
   register: splunk_license_result
   changed_when: splunk_license_result.rc != 0
   failed_when: splunk_license_result.rc == 0
