--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,11 +1,10 @@
 galaxy_info:
   role_name: ludus_splunk
-  namespace: prymalinstynct
-  author: Mason Morales <mason@splunk.com>
+  author: PrymalInstynct
   description: Splunk's official Ansible role for installing Splunk, upgrading Splunk, and installing apps/addons from Git repositories to Splunk deployments
   company: Splunk Inc.
   license: Apache-2.0
-  min_ansible_version: "2.7"
+  min_ansible_version: "2.10"
   platforms:
     - name: EL
       versions:
